// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon demo -- customStyle 1`] = `
.c0 {
  vertical-align: baseline;
}

<div>
  <i
    class="uc-fe-icon icon__link c0"
    style="margin-right:10px;"
  />
  <i
    class="uc-fe-icon icon__link test_cls c0"
    style="color:red;font-size:20px;"
  />
</div>
`;

exports[`Icon demo -- icon 1`] = `
.c12 {
  vertical-align: baseline;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c9 .c10 {
  color: #c3cad9;
}

.c9 .c10 {
  color: #3860f4;
}

.c13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #c3cad9;
}

.c13:hover {
  color: #0a1633;
}

.c13:hover .c10 {
  color: #3357df;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-bxivhb {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-bxivhb:last-child {
  margin-right: 0;
}

.c7 .c34 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c34:last-child {
  margin-right: 0;
}

.c7 .c35+.c35 {
  margin-left: -1px;
}

.c7 .c33 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c33:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c33:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3357df;
}

.c14:hover .c20 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c14 .c20 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

.c30 {
  position: relative;
}

.c32 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c26 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.c26:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c28 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
  cursor: not-allowed;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.c28:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c24 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
  height: 28px;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.c24 .c31 {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c24 .c31::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 .c31::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 .c31:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 .c31::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24:hover {
  border-color: #c3cad9;
}

.c24 .c29 {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.c24 .c29:hover {
  background: #f6f6fb;
}

.c24 .c31 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c24 .c25,
.c24 .c27 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c24 .c25:hover,
.c24 .c27:hover {
  color: #3860f4;
}

.c24 .c25 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c24 .c27 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        type
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            circle-fill
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            circle
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            loading
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        spin
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        fontSize
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c24"
        >
          <div>
            <span
              class="c25 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c26"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c12"
              />
            </span>
            <span
              class="c27 uc-fe-numberinput-handler-down uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c28"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c12"
              />
            </span>
          </div>
          <div
            class="c29 uc-fe-numberinput-input-wrap c30"
          >
            <input
              autocomplete="off"
              class="c31 uc-fe-numberinput-input c32"
              max="100"
              min="12"
              step="1"
              value="12"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        color
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <input
          type="color"
          value="#000"
        />
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <i
      class="uc-fe-icon icon__circle-fill c12"
      style="font-size:12px;color:#000;"
    />
  </div>
</div>
`;

exports[`Icon demo -- spin 1`] = `
.c0 {
  vertical-align: baseline;
}

.c0.c0.c0 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

<div>
  <i
    class="uc-fe-icon icon__link uc-fe-icon-spin c0"
    style="margin-right:10px;"
  />
  <i
    class="uc-fe-icon icon__check uc-fe-icon-spin c0"
    style="margin-right:10px;"
  />
  <i
    class="uc-fe-icon icon__circle-check uc-fe-icon-spin c0"
    style="margin-right:10px;"
  />
  <i
    class="uc-fe-icon icon__arrow-left uc-fe-icon-spin c0"
    style="margin-right:10px;"
  />
  <i
    class="uc-fe-icon icon__checkbox uc-fe-icon-spin c0"
    style="margin-right:10px;"
  />
  <i
    class="uc-fe-icon icon__loading uc-fe-icon-spin c0"
    style="margin-right:10px;"
  />
</div>
`;

exports[`Icon demo -- type 1`] = `
.c0 {
  vertical-align: baseline;
}

<div>
  <i
    class="uc-fe-icon icon__link c0"
    style="margin-right:10px;"
  />
  <i
    class="uc-fe-icon icon__check c0"
    style="margin-right:10px;"
  />
  <i
    class="uc-fe-icon icon__circle-check c0"
    style="margin-right:10px;"
  />
  <i
    class="uc-fe-icon icon__arrow-left c0"
    style="margin-right:10px;"
  />
  <i
    class="uc-fe-icon icon__checkbox c0"
    style="margin-right:10px;"
  />
  <i
    class="uc-fe-icon icon__loading c0"
    style="margin-right:10px;"
  />
</div>
`;
